--- a/src/styles/UI/_input.scss
+++ b/src/styles/UI/_input.scss
@@ -25,7 +25,8 @@
 
 .textarea {
   resize: none;
-  height: rem(100px);
+  transition: none;
+  min-height: rem(100px);
   &.active {
     padding-top: rem(26px);
   }
