--- a/src/styles/components/portfolio/_portfolio-card.scss
+++ b/src/styles/components/portfolio/_portfolio-card.scss
@@ -1,24 +1,34 @@
 .portfolio-card {
   position: relative;
-
+  background: #4ad0d8;
+  border-radius: rem(6px);
+  height: 360px;
+  @media (max-width: 1200px) {
+    height: 31vw;
+  }
+  @media (max-width: 768px) {
+    height: 41vw;
+  }
+  @media (max-width: 576px) {
+    height: 41vw;
+  }
+  &:hover {
+    .portfolio-card__img {
+      transform: translate(8px, -8px);
+    }
+    @media (max-width: 992px) {
+      .portfolio-card__img {
+        transform: translate(0);
+      }
+    }
+  }
   &__img {
     width: 100%;
-    height: 360px;
+    height: 100%;
     object-fit: cover;
     transition: .2s linear;
     border-radius: rem(6px);
-    @media (max-width: 1200px) {
-      height: 31vw;
-    }
-    @media (max-width: 992px) {
-      height: 31vw;
-    }
-    @media (max-width: 768px) {
-      height: 41vw;
-    }
-    @media (max-width: 576px) {
-      height: 41vw;
-    }
+
   }
   &__title {
     margin-top: 20px;
