add second font

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -2,3 +2,5 @@
 @include font-face("Poppins", "@/assets/fonts/poppins/Poppins-Medium", 500)
 @include font-face("Poppins", "@/assets/fonts/poppins/Poppins-SemiBold", 600)
 @include font-face("Poppins", "@/assets/fonts/poppins/Poppins-Bold", 700)
+@include font-face("Formular", "@/assets/fonts/formular/Formular", 400)
+@include font-face("Formular", "@/assets/fonts/formular/Formular-Medium", 500)
