--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,11 +31,12 @@ html {
 
 body {
   font-weight: 400;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', 'Formular', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #2B2B2B;
 }
+
 
 .container {
   width: 100%;
