--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -6,11 +6,16 @@
     width: 100%;
   }
   &__item {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     margin-bottom: rem(26px);
     &:last-child {
       margin-bottom: 0;
+    }
+    &:hover {
+      .contact__name {
+        border-color: #2B2B2B;
+      }
     }
   }
   &__icon {
@@ -28,8 +33,15 @@
     font-size: rem(20px);
     font-weight: 500;
     color: #2B2B2B;
+    border-bottom: 2px solid  transparent;
+    transition: .2s linear;
     @media (max-width: 576px) {
       font-size: rem(18px);
     }
+  }
+  &__box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
