--- a/src/styles/components/portfolio/_portfolio-card.scss
+++ b/src/styles/components/portfolio/_portfolio-card.scss
@@ -2,15 +2,15 @@
   position: relative;
   background: #4ad0d8;
   border-radius: rem(6px);
-  height: 360px;
+  height: rem(235px);
   @media (max-width: 1200px) {
-    height: 31vw;
+    height: 19vw;
   }
-  @media (max-width: 768px) {
-    height: 41vw;
+  @media (max-width: 992px) {
+    height: 28vw;
   }
   @media (max-width: 576px) {
-    height: 41vw;
+    height: 53vw;
   }
   &:hover {
     .portfolio-card__img {
@@ -28,7 +28,7 @@
     object-fit: cover;
     transition: .2s linear;
     border-radius: rem(6px);
-
+    box-shadow: 0 0 14px rgba(#CCC, 0.5);
   }
   &__title {
     margin-top: 20px;
