--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,16 +50,16 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: rem(24px);
   grid-row-gap: rem(30px);
-  @media (max-width: 992px) {
+  @media (max-width: 1200px) {
     grid-column-gap: rem(20px);
     grid-row-gap: rem(22px);
   }
-  @media (max-width: 768px) {
+  @media (max-width: 992px) {
     grid-template-columns: repeat(2, 1fr);
   }
   @media (max-width: 576px) {
-    grid-row-gap: rem(14px);
-    grid-column-gap: rem(12px);
+    grid-template-columns: 1fr;
+    grid-row-gap: rem(16px);
   }
 }
 
