--- a/src/styles/components/_main-skills.scss
+++ b/src/styles/components/_main-skills.scss
@@ -5,6 +5,8 @@
   }
 
   &__item {
+    display: flex;
+    align-items: center;
     margin-bottom: rem(30px);
 
     &:last-child {
@@ -13,6 +15,28 @@
 
     @media (max-width: 576px) {
       margin-bottom: rem(22px);
+    }
+  }
+
+  &__icon {
+    width: rem(29px);
+    height: rem(29px);
+    margin-right: rem(16px);
+    @media (max-width: 576px) {
+      margin-right: rem(14px);
+      width: rem(24px);
+      height: rem(24px);
+    }
+  }
+
+  &__name {
+    font-size: rem(24px);
+    font-weight: 500;
+    @media (max-width: 768px) {
+      font-size: rem(22px);
+    }
+    @media (max-width: 576px) {
+      font-size: rem(18px);
     }
   }
 }
