--- a/src/styles/components/_about-me.scss
+++ b/src/styles/components/_about-me.scss
@@ -1,8 +1,39 @@
+@keyframes animate{
+  0%{
+    background-position: 0 50%;
+  }
+  50%{
+    background-position: 100% 50%;
+  }
+  100%{
+    background-position: 0 50%;
+  }
+}
+
 .about-me {
   &__img {
     width: 100%;
     height: rem(300px);
     object-fit: cover;
+    @media (max-width: 1200px) {
+      height: rem(260px);
+    }
+    @media (max-width: 768px) {
+      height: rem(200px);
+    }
+    @media (max-width: 576px) {
+      height: rem(110px);
+    }
+  }
+
+  &__background {
+    width: 100%;
+    height: rem(300px);
+    background: linear-gradient(-45deg, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);;
+    background-size: 400% 400%;
+    position: relative;
+    animation: animate 7.5s ease-in-out infinite;
+    z-index: -1;
     @media (max-width: 1200px) {
       height: rem(260px);
     }
