--- a/src/styles/components/_main-skills.scss
+++ b/src/styles/components/_main-skills.scss
@@ -1,13 +1,13 @@
 .main-skills {
   width: 60%;
-  @media (max-width: 576px) {
+  @media (max-width: 768px) {
     width: 100%;
   }
 
   &__item {
     display: flex;
     align-items: center;
-    margin-bottom: rem(30px);
+    /* margin-bottom: rem(30px);
 
     &:last-child {
       margin-bottom: 0;
@@ -15,7 +15,7 @@
 
     @media (max-width: 576px) {
       margin-bottom: rem(22px);
-    }
+    } */
   }
 
   &__icon {
@@ -36,7 +36,20 @@
       font-size: rem(22px);
     }
     @media (max-width: 576px) {
-      font-size: rem(18px);
+      font-size: rem(17px);
+    }
+  }
+
+  &__wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    @media (max-width: 992px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 576px) {
+      grid-gap: 26px;
+      grid-row-gap: 20px;
     }
   }
 }
